objects/Parent_object1__c.object
<CustomObject>
    <fields>
        <fullName>Parent_field_email_1__c</fullName>
        <label>Parent field email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent_field_number_1__c</fullName>
        <label>Parent field number 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_field_phone_1__c</fullName>
        <label>Parent field phone 1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parent_field_phone_2__c</fullName>
        <label>Parent field phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Parent_field_phone_3__c</fullName>
        <label>Parent field phone 3</label>
        <type>Phone</type>
    </fields>
    <label>Parent object1</label>
    <nameField>
        <label>Parent object1  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent object1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>